--- a/app/src/main/res/layout/view_page_header.xml
+++ b/app/src/main/res/layout/view_page_header.xml
@@ -27,6 +27,7 @@
             android:layout_height="match_parent" />
 
         <LinearLayout
+            android:id="@+id/callToActionContainer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
