--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -341,12 +341,11 @@
 
     <style name="SimpleDraweeViewPlaceholder">
         <item name="actualImageScaleType">centerCrop</item>
-        <item name="placeholderImage">?attr/thumbnail_image_placeholder</item>
         <item name="placeholderImageScaleType">fitCenter</item>
-        <item name="failureImage">?attr/thumbnail_image_placeholder</item>
+        <item name="failureImage">?android:colorBackground</item>
         <item name="failureImageScaleType">fitCenter</item>
         <item name="fadeDuration">0</item>
-        <item name="backgroundImage">?attr/paper_color</item>
+        <item name="backgroundImage">?android:colorBackground</item>
     </style>
 
     <style name="SimpleDraweeViewPlaceholder.SuggestedEdits">
