Remove placehoder for the image view

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -350,14 +350,14 @@
     </style>
 
     <style name="SimpleDraweeViewPlaceholder.SuggestedEdits">
-        <item name="placeholderImage">@drawable/ic_image_gray_transparent_24dp</item>
-        <item name="failureImage">@drawable/ic_image_gray_transparent_24dp</item>
+        <item name="placeholderImage">@null</item>
+        <item name="failureImage">@null</item>
         <item name="backgroundImage">@color/base30</item>
     </style>
 
     <style name="SimpleDraweeViewPlaceholder.SuggestedEditsReview">
-        <item name="placeholderImage">@drawable/ic_image_gray_transparent_24dp</item>
-        <item name="failureImage">@drawable/ic_image_gray_transparent_24dp</item>
+        <item name="placeholderImage">@null</item>
+        <item name="failureImage">@null</item>
         <item name="backgroundImage">@android:color/black</item>
     </style>
 
