Adding caption if there is no structured caption

--- a/app/src/main/res/layout/view_page_header.xml
+++ b/app/src/main/res/layout/view_page_header.xml
@@ -27,12 +27,13 @@
             android:layout_height="match_parent" />
 
         <LinearLayout
-            android:id="@+id/callToActionContainer"
+            android:id="@+id/call_to_action_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:paddingStart="12dp"
-            android:paddingBottom="12dp">
+            android:paddingBottom="12dp"
+            android:visibility="gone">
 
             <ImageView
                 android:layout_width="@dimen/app_shortcut_icon_size"
@@ -42,13 +43,14 @@
                 app:srcCompat="@drawable/ic_add_gray_themed_24dp" />
 
             <TextView
+                android:id="@+id/call_to_action_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:fontFamily="sans-serif-medium"
                 android:letterSpacing="0.04"
                 android:lineSpacingExtra="6sp"
-                android:text="ADD CAPTION"
+                android:textAllCaps="true"
                 android:textColor="?attr/paper_color"
                 android:textSize="14sp"
                 android:textStyle="normal"
