--- a/app/src/main/res/layout/view_description_edit_review.xml
+++ b/app/src/main/res/layout/view_description_edit_review.xml
@@ -101,7 +101,7 @@
 
         <org.wikipedia.views.FaceAndColorDetectImageView
             android:id="@+id/galleryImage"
-            style="@style/SimpleDraweeViewPlaceholder.SuggestedEditsReview"
+            style="@style/SimpleDraweeViewPlaceholder.SuggestedEdits.Review"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:actualImageScaleType="fitCenter"
