--- a/app/src/main/res/layout/dialog_image_preview.xml
+++ b/app/src/main/res/layout/dialog_image_preview.xml
@@ -51,6 +51,7 @@
                     android:paddingBottom="4dp"
                     android:textColor="?attr/primary_text_color"
                     android:textSize="14sp"
+                    android:layout_marginEnd="16dp"
                     tools:text="Lorem ipsum" />
             </LinearLayout>
 
@@ -58,8 +59,8 @@
                 android:id="@+id/galleryImage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
                 android:contentDescription="@null"
+                app:viewAspectRatio="1.33"
                 app:actualImageScaleType="fitCenter" />
 
             <LinearLayout
