--- a/app/src/main/res/layout/view_description_edit_read_article_bar.xml
+++ b/app/src/main/res/layout/view_description_edit_read_article_bar.xml
@@ -16,34 +16,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <FrameLayout
-        android:id="@+id/leftViewContainer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+    <ImageView
+        android:id="@+id/viewDownChevron"
+        android:layout_width="@dimen/bottom_toolbar_icon_size"
+        android:layout_height="@dimen/bottom_toolbar_icon_size"
+        android:layout_gravity="center_vertical"
+        android:contentDescription="@null"
+        android:padding="@dimen/bottom_toolbar_item_padding"
+        android:tint="?attr/main_toolbar_icon_color"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-        <com.facebook.drawee.view.SimpleDraweeView
-            android:id="@+id/viewArticleImage"
-            style="@style/SimpleDraweeViewPlaceholder"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="16dp"
-            android:contentDescription="@null"/>
-
-        <ImageView
-            android:id="@+id/viewDownChevron"
-            android:layout_width="@dimen/bottom_toolbar_icon_size"
-            android:layout_height="@dimen/bottom_toolbar_icon_size"
-            android:layout_gravity="center_vertical"
-            android:contentDescription="@null"
-            android:padding="@dimen/bottom_toolbar_item_padding"
-            android:layout_marginStart="-16dp"
-            android:tint="?attr/main_toolbar_icon_color"
-            app:srcCompat="@drawable/ic_keyboard_arrow_up_black_24dp"/>
-    </FrameLayout>
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/ic_keyboard_arrow_up_black_24dp"/>
 
     <TextView
         android:id="@+id/viewArticleTitle"
@@ -56,42 +39,25 @@
         android:textSize="14sp"
         android:maxLines="2"
         android:ellipsize="end"
+        android:layout_marginEnd="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/leftViewContainer"
-        app:layout_constraintEnd_toStartOf="@+id/rightViewContainer"
+        app:layout_constraintStart_toEndOf="@+id/viewDownChevron"
+        app:layout_constraintEnd_toStartOf="@+id/viewImageThumbnail"
         app:layout_constraintTop_toBottomOf="@+id/viewDivider"
         app:layout_constraintHorizontal_weight="1" />
 
-    <FrameLayout
-        android:id="@+id/rightViewContainer"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginStart="16dp"
+    <com.facebook.drawee.view.SimpleDraweeView
+        android:id="@+id/viewImageThumbnail"
+        style="@style/SimpleDraweeViewPlaceholder"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center"
+        android:visibility="gone"
         android:layout_marginEnd="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/viewArticleTitle"
         app:layout_constraintTop_toBottomOf="@+id/viewDivider"
-        app:layout_constraintVertical_weight="1">
-
-        <TextView
-            android:id="@+id/viewReadButton"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:fontFamily="sans-serif-medium"
-            android:gravity="center_vertical"
-            android:text="@string/description_edit_read"
-            android:textAllCaps="true"
-            android:textColor="?attr/material_theme_secondary_color"
-            android:textSize="14sp" />
-
-        <com.facebook.drawee.view.SimpleDraweeView
-            android:id="@+id/viewImageThumbnail"
-            style="@style/SimpleDraweeViewPlaceholder"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:visibility="gone" />
-    </FrameLayout>
+        app:layout_constraintVertical_weight="1" />
 
 </merge>
