--- a/app/src/main/res/layout/view_description_edit_review.xml
+++ b/app/src/main/res/layout/view_description_edit_review.xml
@@ -124,7 +124,7 @@
             android:paddingTop="36dp"
             android:paddingBottom="16dp"
             android:layout_gravity="bottom"
-            android:lineSpacingExtra="8sp"
+            android:lineSpacingMultiplier="1.5"
             android:background="@drawable/gallery_caption_gradient_background"
             tools:text="Sample image description text" />
     </FrameLayout>
