--- a/app/src/main/res/layout/item_language_spinner.xml
+++ b/app/src/main/res/layout/item_language_spinner.xml
@@ -2,4 +2,5 @@
     android:id="@android:id/text1"
     style="@style/LanguageSpinnerItemTextAppearance"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
+    android:layout_height="wrap_content"
+    android:background="?attr/suggestions_background_color" />
