--- a/app/src/main/res/layout/fragment_suggested_edits_cards_item.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_cards_item.xml
@@ -50,8 +50,9 @@
                 android:id="@+id/viewArticleImage"
                 style="@style/SimpleDraweeViewPlaceholder.SuggestedEdits"
                 android:layout_width="match_parent"
-                android:layout_height="201dp"
+                android:layout_height="wrap_content"
                 app:actualImageScaleType="focusCrop"
+                app:viewAspectRatio="1.77"
                 app:fadeDuration="0" />
 
             <LinearLayout
