--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -362,8 +362,8 @@
         <item name="android:layout_width">28dp</item>
         <item name="android:layout_height">28dp</item>
         <item name="android:contentDescription">@null</item>
-        <item name="placeholderImage">?attr/material_theme_border_color</item>
-        <item name="failureImage">?attr/material_theme_border_color</item>
+        <item name="placeholderImage">?android:colorBackground</item>
+        <item name="failureImage">?android:colorBackground</item>
         <item name="roundedCornerRadius">2dp</item>
         <item name="roundTopLeft">false</item>
         <item name="roundTopRight">false</item>
