--- a/app/src/main/res/layout/fragment_suggested_edits_cards.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_cards.xml
@@ -72,8 +72,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toTopOf="@id/bottomButtonContainer"
-            app:layout_constraintTop_toBottomOf="@id/wikiLanguageDropdownContainer"
-            app:layout_constraintVertical_weight="1" />
+            app:layout_constraintTop_toBottomOf="@id/wikiLanguageDropdownContainer" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/bottomButtonContainer"
