--- a/app/src/main/res/xml/developer_preferences.xml
+++ b/app/src/main/res/xml/developer_preferences.xml
@@ -251,6 +251,10 @@
             android:key="@string/preference_key_show_remove_chinese_variant_prompt"
             android:title="@string/preference_key_show_remove_chinese_variant_prompt" />
 
+        <SwitchPreferenceCompat
+            android:key="@string/preference_key_show_description_edit_success_prompt"
+            android:title="@string/preference_key_show_description_edit_success_prompt" />
+
     </PreferenceCategory>
 
     <PreferenceCategory android:title="@string/preferences_developer_reading_list_category">
