--- a/app/src/main/res/layout/dialog_image_preview.xml
+++ b/app/src/main/res/layout/dialog_image_preview.xml
@@ -46,7 +46,7 @@
                     android:layout_weight="1"
                     android:ellipsize="end"
                     android:fontFamily="serif"
-                    android:lineSpacingMultiplier="0.9"
+                    android:lineSpacingExtra="6sp"
                     android:maxLines="3"
                     android:paddingBottom="4dp"
                     android:textColor="?attr/primary_text_color"
@@ -65,7 +65,7 @@
 
             <LinearLayout
                 android:id="@+id/detailsHolder"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical" />
 
