--- a/app/src/main/res/layout/view_image_detail.xml
+++ b/app/src/main/res/layout/view_image_detail.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -27,16 +28,36 @@
         android:layout_height="1dp"
         android:background="?attr/chip_background_color" />
 
-    <TextView
-        android:id="@+id/detailTextView"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/detailsContainer"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="11dp"
-        android:fontFamily="sans-serif"
-        android:lineSpacingExtra="8sp"
-        android:textColor="?attr/primary_text_color"
-        android:textSize="16sp"
-        android:textStyle="normal"
-        tools:text="Watercolor portrait of Ada King, Countess of Lovelace (Ada Lovelace)" />
+        android:clickable="true"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/detailTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="11dp"
+            android:fontFamily="sans-serif"
+            android:lineSpacingExtra="8sp"
+            android:textColor="?attr/primary_text_color"
+            android:textSize="16sp"
+            android:textStyle="normal"
+            tools:text="Watercolor portrait of Ada King, Countess of Lovelace (Ada Lovelace)" />
+
+        <ImageView
+            android:id="@+id/externalLinkView"
+            android:layout_width="@dimen/bottom_toolbar_icon_size"
+            android:layout_height="@dimen/bottom_toolbar_icon_size"
+            android:contentDescription="@null"
+            android:padding="12dp"
+            android:tint="?attr/colorAccent"
+            android:visibility="visible"
+            app:srcCompat="@drawable/ic_open_in_new_black_24px" />
+    </LinearLayout>
+
 
 </LinearLayout>
