--- a/app/src/main/res/layout/item_language_spinner.xml
+++ b/app/src/main/res/layout/item_language_spinner.xml
@@ -3,4 +3,5 @@
     style="@style/LanguageSpinnerItemTextAppearance"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?attr/suggestions_background_color" />
+    android:background="?attr/suggestions_background_color"
+    android:foreground="?android:attr/selectableItemBackgroundBorderless"/>
