--- a/app/src/main/res/layout/view_page_header.xml
+++ b/app/src/main/res/layout/view_page_header.xml
@@ -31,8 +31,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:paddingStart="12dp"
-            android:paddingBottom="12dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginBottom="12dp"
             android:gravity="center_vertical"
             android:background="?attr/selectableItemBackground"
             android:visibility="gone">
