--- a/app/src/main/res/layout/fragment_suggested_edits_cards_item.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_cards_item.xml
@@ -55,7 +55,7 @@
                 app:viewAspectRatio="1.77"
                 app:fadeDuration="0" />
 
-            <LinearLayout
+            <org.wikipedia.views.InterceptTouchEventLinearLayout
                 android:id="@+id/viewArticleContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -120,10 +120,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:paddingBottom="16dp"
+                    android:paddingBottom="11dp"
                     android:requiresFadingEdge="vertical"
                     android:fadingEdge="vertical"
-                    android:fadingEdgeLength="6dp"
+                    android:fadingEdgeLength="14dp"
                     android:scrollbars="none">
 
                     <FrameLayout
@@ -179,7 +179,7 @@
                         </LinearLayout>
                     </FrameLayout>
                 </ScrollView>
-            </LinearLayout>
+            </org.wikipedia.views.InterceptTouchEventLinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </FrameLayout>
