Improve gradient at bottom.
Change-Id: I8b56a1ef31e4de0b01baceee9c370bba1d733caf

--- a/app/src/main/res/drawable/suggested_edits_card_bottom_gradient_background.xml
+++ b/app/src/main/res/drawable/suggested_edits_card_bottom_gradient_background.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
     <gradient
         android:startColor="#00000000"
-        android:endColor="?attr/button_background_color"
+        android:endColor="?attr/paper_color"
         android:angle="270"/>
 </shape>
