Use foreground ripple instead of background.
Change-Id: I15929dac99a26248822e2de67a7c61563a542910

--- a/app/src/main/res/layout/fragment_suggested_edits_cards_item.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_cards_item.xml
@@ -47,7 +47,7 @@
                 android:layout_height="wrap_content"
                 android:clickable="true"
                 android:focusable="true"
-                android:background="?attr/selectableItemBackground"
+                android:foreground="?attr/selectableItemBackground"
                 android:orientation="vertical">
 
                 <org.wikipedia.views.FaceAndColorDetectImageView
