Use proper ratio on card image for landscape mode

--- a/app/src/main/res/layout-land/fragment_suggested_edits_cards_item.xml
+++ b/app/src/main/res/layout-land/fragment_suggested_edits_cards_item.xml
@@ -59,9 +59,10 @@
                     style="@style/SimpleDraweeViewPlaceholder.SuggestedEdits"
                     android:id="@+id/viewArticleImage"
                     android:layout_width="match_parent"
-                    android:layout_height="136dp"
-                    app:fadeDuration="0"
-                    app:actualImageScaleType="focusCrop" />
+                    android:layout_height="wrap_content"
+                    app:actualImageScaleType="focusCrop"
+                    app:viewAspectRatio="3.8"
+                    app:fadeDuration="0" />
 
                 <LinearLayout
                     android:id="@+id/viewArticleContainer"
