--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -108,7 +108,6 @@
             android:id="@+id/gallery_caption_translate_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="12dp"
             android:paddingStart="@dimen/activity_horizontal_margin"
             android:paddingEnd="@dimen/activity_horizontal_margin"
             android:background="@color/black38"
@@ -119,7 +118,8 @@
                 android:id="@+id/gallery_caption_translate_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
+                android:paddingTop="12dp"
+                android:paddingBottom="16dp"
                 android:foreground="?attr/selectableItemBackgroundBorderless">
 
                 <ImageView
