--- a/app/src/main/res/layout/view_image_detail.xml
+++ b/app/src/main/res/layout/view_image_detail.xml
@@ -32,16 +32,15 @@
         android:id="@+id/detailsContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clickable="true"
-        android:gravity="center_vertical"
+        android:paddingTop="12dp"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/detailTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="11dp"
             android:fontFamily="sans-serif"
+            android:gravity="center_vertical"
             android:lineSpacingExtra="8sp"
             android:textColor="?attr/primary_text_color"
             android:textSize="16sp"
@@ -50,12 +49,12 @@
 
         <ImageView
             android:id="@+id/externalLinkView"
-            android:layout_width="@dimen/bottom_toolbar_icon_size"
-            android:layout_height="@dimen/bottom_toolbar_icon_size"
+            android:layout_width="@dimen/app_shortcut_icon_size"
+            android:layout_height="@dimen/app_shortcut_icon_size"
+            android:layout_marginStart="12dp"
             android:contentDescription="@null"
-            android:padding="12dp"
             android:tint="?attr/colorAccent"
-            android:visibility="visible"
+            android:visibility="gone"
             app:srcCompat="@drawable/ic_open_in_new_black_24px" />
     </LinearLayout>
 
