--- a/app/src/main/res/layout/view_page_header.xml
+++ b/app/src/main/res/layout/view_page_header.xml
@@ -31,9 +31,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:layout_marginStart="12dp"
+            android:layout_marginStart="4dp"
             android:layout_marginBottom="12dp"
             android:gravity="center_vertical"
+            android:padding="8dp"
             android:background="?attr/selectableItemBackground"
             android:visibility="gone">
 
