--- a/app/src/main/res/layout/view_image_detail.xml
+++ b/app/src/main/res/layout/view_image_detail.xml
@@ -31,7 +31,7 @@
 
     <LinearLayout
         android:id="@+id/detailsContainer"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?android:selectableItemBackground"
         android:orientation="horizontal"
