--- a/app/src/main/res/layout/view_image_detail.xml
+++ b/app/src/main/res/layout/view_image_detail.xml
@@ -48,6 +48,7 @@
             android:textColor="?attr/primary_text_color"
             android:textSize="16sp"
             android:textStyle="normal"
+            android:textIsSelectable="true"
             tools:text="Watercolor portrait of Ada King, Countess of Lovelace (Ada Lovelace)" />
 
         <ImageView
