--- a/app/src/main/res/layout/view_page_header.xml
+++ b/app/src/main/res/layout/view_page_header.xml
@@ -42,7 +42,6 @@
                 android:layout_width="@dimen/app_shortcut_icon_size"
                 android:layout_height="@dimen/app_shortcut_icon_size"
                 android:contentDescription="@null"
-                android:tint="?attr/paper_color"
                 app:srcCompat="@drawable/ic_add_gray_white_24dp" />
 
             <TextView
@@ -52,7 +51,7 @@
                 android:layout_marginStart="8dp"
                 android:fontFamily="sans-serif-medium"
                 android:textAllCaps="true"
-                android:textColor="?attr/paper_color"
+                android:textColor="@color/base100"
                 tools:text="ADD CAPTION" />
         </LinearLayout>
 
